Improved the display of grids that wrap off of the page, fixes #207.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -628,6 +628,7 @@ label.checkbox, label.radio {
 }
 
 .variable-shade, .variable-blind {
+  background-color: $body-bg;
   padding: 10px;
 }
 
