--- a/app/assets/stylesheets/grids.scss
+++ b/app/assets/stylesheets/grids.scss
@@ -1,3 +1,8 @@
 .grid-handle {
   cursor: move;
 }
+
+.variable-grid {
+  display: table;
+  box-shadow: 3px 3px 10px $gray-light;
+}
